src/test/deca/context/invalid/class/void-field.deca
// Programme testant la déclaration d'un field void

class A {
    void a;
}